src/test/deca/syntax/invalid/ineq_int_ineq_void.deca
// Description :
//
//      Test syntaxiquement incorrect de : 3!=
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 09/06/2023 par gl03

{ 
    boolean y = 3!=; 
}